Update hero section with premium law firm messaging

--- a/about.html
+++ b/about.html
@@ -1,69 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <!-- Basic Meta -->
+  <!-- Basic -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <meta name="author" content="Nyaata & Nyaata Company Advocates" />
-  <link rel="author" href="https://musyokamutindaadv.co.ke/humans.txt" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+  <meta name="author" content="Nyaata & Nyaata Advocates" />
+  <meta name="theme-color" content="#0b1b2b" />
+  <meta name="color-scheme" content="light" />
 
-  <!-- Page Title & Description -->
-  <title>About Us | Nyaata & Nyaata Company Advocates</title>
-  <meta name="description" content="Learn about Nyaata & Nyaata Company Advocates — our mission, vision, values, and commitment to providing trusted legal services in Kenya. Meet our team of experienced advocates." />
-  <meta name="keywords" content="Nyaata & Nyaata Advocates, Kenyan law firm, about us, legal services Kenya, litigation, corporate law, real estate, family law, succession" />
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/about.html" />
+  <!-- Title + Description -->
+  <title>About Us | Nyaata & Nyaata Advocates</title>
+  <meta
+    name="description"
+    content="Learn about Nyaata & Nyaata Advocates—our mission, vision, values, and commitment to trusted legal services in Kenya. Meet our team of experienced advocates."
+  />
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/about.html" />
 
-  <!-- Favicons & App Icons -->
-  <link rel="icon" href="favicon-32x32.png" type="image/png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png" />
-  <link rel="manifest" href="site.webmanifest" />
+  <!-- Humans -->
+  <link rel="author" href="https://nyaatanyaataadvocates.co.ke/humans.txt" />
 
-  <!-- Open Graph / Facebook -->
+  <!-- Favicons / App Icons -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="About Us | Nyaata & Nyaata Company Advocates" />
-  <meta property="og:description" content="Discover our mission, vision, values, and legal expertise. Nyaata & Nyaata Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya." />
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/about.html" />
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta property="og:image:alt" content="Nyaata & Nyaata Advocates favicon" />
-  <meta property="og:image:width" content="512" />
-  <meta property="og:image:height" content="512" />
-  <meta property="og:site_name" content="Nyaata & Nyaata Company Advocates" />
+  <meta property="og:site_name" content="Nyaata & Nyaata Advocates" />
   <meta property="og:locale" content="en_KE" />
+  <meta property="og:title" content="About Us | Nyaata & Nyaata Advocates" />
+  <meta
+    property="og:description"
+    content="Discover our mission, vision, and legal expertise. Nyaata & Nyaata Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya."
+  />
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/about.html" />
 
-  <!-- Twitter Card -->
+  <!-- Use a real social banner image (recommended 1200x630) -->
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/about-1200x630.jpg" />
+  <meta property="og:image:secure_url" content="https://nyaatanyaataadvocates.co.ke/assets/og/about-1200x630.jpg" />
+  <meta property="og:image:alt" content="Nyaata & Nyaata Advocates - About Us" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About Us | Nyaata & Nyaata Company Advocates" />
-  <meta name="twitter:description" content="Learn about our mission, vision, values, and legal expertise. Nyaata & Nyaata Advocates provide dependable legal services in Kenya." />
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta name="twitter:image:alt" content="Nyaata & Nyaata Advocates favicon" />
+  <meta name="twitter:title" content="About Us | Nyaata & Nyaata Advocates" />
+  <meta
+    name="twitter:description"
+    content="Learn about our mission, vision, values, and legal expertise. Nyaata & Nyaata Advocates provide dependable legal services in Kenya."
+  />
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/about-1200x630.jpg" />
+  <meta name="twitter:image:alt" content="Nyaata & Nyaata Advocates - About Us" />
+  <!-- Optional if you have it -->
+  <!-- <meta name="twitter:site" content="@yourhandle" /> -->
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <!-- Icons (CDN) -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    referrerpolicy="no-referrer"
+  />
 
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="about.css" />
+  <!-- CSS (preload + stylesheet) -->
+  <link rel="preload" href="/about.css" as="style" />
+  <link rel="stylesheet" href="/about.css" />
 
-  <!-- Structured Data -->
+  <!-- Structured Data (Law Firm) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Nyaata & Nyaata Company Advocates",
-    "url": "https://musyokamutindaadv.co.ke/about.html",
-    "favicon": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png",
+    "@type": "LegalService",
+    "name": "Nyaata & Nyaata Advocates",
+    "url": "https://nyaatanyaataadvocates.co.ke/",
+    "areaServed": "Kenya",
+    "description": "Nyaata & Nyaata Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya.",
+    "image": "https://nyaatanyaataadvocates.co.ke/assets/og/about-1200x630.jpg",
     "sameAs": [
       "https://www.facebook.com/yourpage",
       "https://twitter.com/yourhandle",
       "https://www.linkedin.com/company/yourcompany"
-    ],
-    "description": "Nyaata & Nyaata Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya. Our mission, vision, and core values guide our services."
+    ]
   }
   </script>
 </head>
