--- a/blog.html
+++ b/blog.html
@@ -1,52 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
   <!-- Basic Meta -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
   <meta name="author" content="Nyaata & Nyaata Company Advocates" />
-  <link rel="author" href="https://musyokamutindaadv.co.ke/humans.txt" />
+  <meta name="theme-color" content="#0b1b2b" />
+  <meta name="color-scheme" content="light" />
+  <link rel="author" href="https://nyaatanyaataadvocates.co.ke/humans.txt" />
 
-  <!-- Page Title & Description -->
+  <!-- Title & Description -->
   <title>Legal Insights & Blog | Nyaata & Nyaata Company Advocates</title>
-  <meta name="description" content="Expert legal insights, articles, and updates covering Kenyan law, litigation, corporate law, property, family law, and commercial disputes. Stay informed with Nyaata & Nyaata Advocates." />
-  <meta name="keywords" content="legal blog Kenya, Kenyan law insights, litigation, corporate law, conveyancing, family law, commercial disputes, Nyaata & Nyaata Advocates" />
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/blog.html" />
+  <meta
+    name="description"
+    content="Expert legal insights, articles, and updates covering Kenyan law, litigation, corporate law, property, family law, and commercial disputes. Stay informed with Nyaata & Nyaata Company Advocates."
+  />
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/blog.html" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png" />
-  <link rel="manifest" href="site.webmanifest" />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Legal Insights & Blog | Nyaata & Nyaata Company Advocates" />
-  <meta property="og:description" content="Expert legal insights, case updates, and professional commentary covering Kenyan law, litigation, corporate law, property, and family law." />
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/blog.html" />
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta property="og:image:alt" content="Nyaata & Nyaata Advocates favicon" />
   <meta property="og:site_name" content="Nyaata & Nyaata Company Advocates" />
   <meta property="og:locale" content="en_KE" />
+  <meta property="og:title" content="Legal Insights & Blog | Nyaata & Nyaata Company Advocates" />
+  <meta
+    property="og:description"
+    content="Expert legal insights, case updates, and professional commentary covering Kenyan law, litigation, corporate law, property, and family law."
+  />
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/blog.html" />
+
+  <!-- Recommended: real social banner (1200x630) -->
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/blog-1200x630.jpg" />
+  <meta property="og:image:secure_url" content="https://nyaatanyaataadvocates.co.ke/assets/og/blog-1200x630.jpg" />
+  <meta property="og:image:alt" content="Legal Insights & Blog — Nyaata & Nyaata Company Advocates" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Legal Insights & Blog | Nyaata & Nyaata Company Advocates" />
-  <meta name="twitter:description" content="Stay informed with expert legal insights, updates, and analysis on Kenyan law from Nyaata & Nyaata Advocates." />
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta name="twitter:image:alt" content="Nyaata & Nyaata Advocates favicon" />
+  <meta
+    name="twitter:description"
+    content="Stay informed with expert legal insights, updates, and analysis on Kenyan law from Nyaata & Nyaata Company Advocates."
+  />
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/blog-1200x630.jpg" />
+  <meta name="twitter:image:alt" content="Legal Insights & Blog — Nyaata & Nyaata Company Advocates" />
+  <!-- Optional -->
+  <!-- <meta name="twitter:site" content="@yourhandle" /> -->
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
   <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    referrerpolicy="no-referrer"
+  />
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="blog.css" />
+  <link rel="preload" href="/blog.css" as="style" />
+  <link rel="stylesheet" href="/blog.css" />
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -54,19 +80,21 @@
     "@context": "https://schema.org",
     "@type": "Blog",
     "name": "Nyaata & Nyaata Legal Insights",
-    "url": "https://musyokamutindaadv.co.ke/blog.html",
-    "description": "Expert legal insights, articles, and updates from Nyaata & Nyaata Advocates covering Kenyan law.",
+    "url": "https://nyaatanyaataadvocates.co.ke/blog.html",
+    "description": "Expert legal insights, articles, and updates from Nyaata & Nyaata Company Advocates covering Kenyan law.",
     "publisher": {
       "@type": "Organization",
       "name": "Nyaata & Nyaata Company Advocates",
-      "favicon": {
+      "url": "https://nyaatanyaataadvocates.co.ke/",
+      "logo": {
         "@type": "ImageObject",
-        "url": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png"
+        "url": "https://nyaatanyaataadvocates.co.ke/full-favicon-512x512.png"
       }
     }
   }
   </script>
 </head>
+
 
   <body>
     <!-- Header & Navigation -->
@@ -487,7 +515,7 @@
                 <input
                   type="hidden"
                   name="_next"
-                  value="https://musyokamutindaadv.co.ke/thank-you.html"
+                  value="https://nyaatanyaataadvocates.co.ke/thank-you.html"
                 />
 
                 <!-- Optional: Custom email subject -->
