--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+<head>
   <!-- Basic Meta -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <meta name="author" content="Nyaata & Nyaata Advocates" />
+  <meta name="theme-color" content="#0b1b2b" />
+  <meta name="color-scheme" content="light" />
 
-  <!-- Page Title & Description -->
+  <!-- Title & Description -->
   <title>Contact Our Legal Team in Kenya | Nyaata & Nyaata Advocates</title>
-  <meta name="description" content="Reach Nyaata & Nyaata Advocates for legal consultations, representation, and inquiries in Machakos and across Kenya. Professional, responsive legal support." />
-  
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/contact" />
+  <meta
+    name="description"
+    content="Contact Nyaata & Nyaata Advocates for legal consultations, representation, and inquiries in Machakos and across Kenya. Professional and responsive legal support."
+  />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/contact.html" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png" />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="Contact Nyaata & Nyaata Advocates – Legal Services in Kenya" />
-  <meta property="og:description" content="Get in touch with our law firm for consultations, legal representation, or inquiries. Serving Machakos and clients across Kenya." />
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/contact" />
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
   <meta property="og:site_name" content="Nyaata & Nyaata Advocates" />
+  <meta property="og:locale" content="en_KE" />
+  <meta property="og:title" content="Contact Nyaata & Nyaata Advocates – Legal Services in Kenya" />
+  <meta
+    property="og:description"
+    content="Get in touch with our law firm for consultations, legal representation, or inquiries. Serving Machakos and clients across Kenya."
+  />
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/contact.html" />
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/contact-1200x630.jpg" />
+  <meta property="og:image:secure_url" content="https://nyaatanyaataadvocates.co.ke/assets/og/contact-1200x630.jpg" />
+  <meta property="og:image:alt" content="Contact Nyaata & Nyaata Advocates – Machakos, Kenya" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Contact Nyaata & Nyaata Advocates – Legal Services in Kenya" />
-  <meta name="twitter:description" content="Get in touch with our law firm for consultations, legal representation, or inquiries. Serving Machakos and clients across Kenya." />
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
+  <meta
+    name="twitter:description"
+    content="Reach our legal team for consultations, representation, and inquiries. Serving Machakos and clients across Kenya."
+  />
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/contact-1200x630.jpg" />
+  <meta name="twitter:image:alt" content="Contact Nyaata & Nyaata Advocates – Machakos, Kenya" />
 
-  <!-- Fonts & Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet"
+  />
+
+  <!-- Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    referrerpolicy="no-referrer"
+  />
 
   <!-- Page Styles -->
-  <link rel="stylesheet" href="contact.css" />
+  <link rel="preload" href="/contact.css" as="style" />
+  <link rel="stylesheet" href="/contact.css" />
 
-  <!-- JSON-LD Structured Data: Legal Service -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LegalService",
     "name": "Nyaata & Nyaata Advocates",
-    "image": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png",
-    "url": "https://musyokamutindaadv.co.ke",
+    "url": "https://nyaatanyaataadvocates.co.ke/",
+    "image": "https://nyaatanyaataadvocates.co.ke/full-favicon-512x512.png",
     "telephone": "+254794378915",
     "email": "info@nyaataandnyaataadv.co.ke",
     "address": {
@@ -55,14 +85,18 @@
       "streetAddress": "Triple M Complex, Opposite Kwetu Sacco, First Floor",
       "addressLocality": "Machakos Town",
       "addressRegion": "Machakos",
-      "postalCode": "",
       "addressCountry": "KE"
     },
     "areaServed": "Kenya",
-    "priceRange": "$$$"
+    "priceRange": "$$$",
+    "sameAs": [
+      "https://www.facebook.com/yourpage",
+      "https://www.linkedin.com/company/yourcompany"
+    ]
   }
   </script>
 </head>
+
 
   <body>
     <!-- Header & Navigation -->
