--- a/faith-musyoka.html
+++ b/faith-musyoka.html
@@ -19,7 +19,7 @@
   <meta name="keywords" content="Advocate Faith Musyoka, High Court Advocate Kenya, Machakos lawyer, litigation lawyer Kenya, family law advocate, conveyancing Kenya, dispute resolution, Nyaata & Nyaata Advocates">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/faith-musyoka.html" />
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/faith-musyoka.html" />
 
   <!-- Favicons -->
   <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
@@ -42,8 +42,8 @@
   <meta property="og:title" content="Advocate Faith Musyoka - High Court Advocate & Founding Partner">
   <meta property="og:description" content="Founding partner specializing in litigation, family law, conveyancing, and legal advisory services at Nyaata & Nyaata Advocates, Machakos.">
   <meta property="og:type" content="profile">
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/faith-musyoka.html">
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/faith-musyoka-profile.jpg">
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/faith-musyoka.html">
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/faith-musyoka-profile.jpg">
   <meta property="og:image:alt" content="Advocate Faith Musyoka - High Court Advocate Kenya">
   <meta property="og:image:width" content="500">
   <meta property="og:image:height" content="667">
@@ -59,7 +59,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Advocate Faith Musyoka - High Court Advocate & Founding Partner">
   <meta name="twitter:description" content="Founding partner at Nyaata & Nyaata Advocates specializing in litigation, family law, conveyancing, and dispute resolution in Machakos, Kenya.">
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/faith-musyoka-profile.jpg">
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/faith-musyoka-profile.jpg">
   <meta name="twitter:image:alt" content="Advocate Faith Musyoka - High Court Advocate Kenya">
   <meta name="twitter:site" content="@MusyokaMutinda">
   <meta name="twitter:creator" content="@MusyokaMutinda">
@@ -72,13 +72,13 @@
     "name": "Faith Musyoka",
     "jobTitle": "Advocate of the High Court of Kenya",
     "description": "Founding partner at Nyaata & Nyaata Company Advocates specializing in litigation, family law, conveyancing, and dispute resolution in Machakos, Kenya.",
-    "url": "https://musyokamutindaadv.co.ke/faith-musyoka.html",
-    "image": "https://musyokamutindaadv.co.ke/faith-musyoka-profile.jpg",
+    "url": "https://nyaatanyaataadvocates.co.ke/faith-musyoka.html",
+    "image": "https://nyaatanyaataadvocates.co.ke/faith-musyoka-profile.jpg",
     "sameAs": ["https://www.linkedin.com/in/faith-musyoka-9649b6167/"],
     "affiliation": {
       "@type": "LegalService",
       "name": "Nyaata & Nyaata Company Advocates",
-      "url": "https://musyokamutindaadv.co.ke/",
+      "url": "https://nyaatanyaataadvocates.co.ke/",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Machakos",
@@ -113,9 +113,9 @@
     "@context": "https://schema.org",
     "@type": "BreadcrumbList",
     "itemListElement": [
-      {"@type": "ListItem","position": 1,"name": "Home","item": "https://musyokamutindaadv.co.ke/"},
-      {"@type": "ListItem","position": 2,"name": "Our Team","item": "https://musyokamutindaadv.co.ke/team.html"},
-      {"@type": "ListItem","position": 3,"name": "Advocate Faith Musyoka","item": "https://musyokamutindaadv.co.ke/faith-musyoka.html"}
+      {"@type": "ListItem","position": 1,"name": "Home","item": "https://nyaatanyaataadvocates.co.ke/"},
+      {"@type": "ListItem","position": 2,"name": "Our Team","item": "https://nyaatanyaataadvocates.co.ke/team.html"},
+      {"@type": "ListItem","position": 3,"name": "Advocate Faith Musyoka","item": "https://nyaatanyaataadvocates.co.ke/faith-musyoka.html"}
     ]
   }
   </script>
