--- a/index.html
+++ b/index.html
@@ -2,70 +2,112 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Primary SEO Meta Tags -->
   <title>Nyaata & Nyaata Company Advocates | Trusted Legal Partners in Kenya</title>
-  <meta name="description" content="Nyaata & Nyaata Company Advocates provide professional legal services in Kenya, specializing in Litigation, Corporate Law, Conveyancing, Family Law, and Commercial Transactions. Trusted advocates delivering results across Kenya." />
-  <meta name="keywords" content="Legal Services Kenya, Litigation, Corporate Law, Family Law, Conveyancing, Commercial Transactions, Trusted Advocates, Law Firm Machakos, Legal Experts Kenya" />
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/" />
+  <meta
+    name="description"
+    content="Nyaata & Nyaata Company Advocates provide professional legal services in Kenya, specializing in Litigation, Corporate Law, Conveyancing, Family Law, and Commercial Transactions. Trusted advocates delivering results across Kenya."
+  />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="author" content="Nyaata & Nyaata Company Advocates" />
+  <meta name="theme-color" content="#0b1b2b" />
+  <meta name="color-scheme" content="light" />
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/" />
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
 
   <!-- Open Graph / Social Preview -->
-  <meta property="og:title" content="Nyaata & Nyaata Company Advocates | Trusted Legal Partners in Kenya" />
-  <meta property="og:description" content="Nyaata & Nyaata deliver professional legal services in Litigation, Corporate Law, Conveyancing, Family Law, and Commercial Transactions across Kenya." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/" />
   <meta property="og:site_name" content="Nyaata & Nyaata Company Advocates" />
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta property="og:image:width" content="512" />
-  <meta property="og:image:height" content="512" />
+  <meta property="og:locale" content="en_KE" />
+  <meta property="og:title" content="Nyaata & Nyaata Company Advocates | Trusted Legal Partners in Kenya" />
+  <meta
+    property="og:description"
+    content="Professional legal services in Litigation, Corporate Law, Conveyancing, Family Law, and Commercial Transactions across Kenya."
+  />
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/" />
+
+  <!-- Use a real social banner (recommended 1200x630) -->
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/home-1200x630.jpg" />
+  <meta property="og:image:secure_url" content="https://nyaatanyaataadvocates.co.ke/assets/og/home-1200x630.jpg" />
+  <meta property="og:image:alt" content="Nyaata & Nyaata Company Advocates - Trusted Legal Partners in Kenya" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Nyaata & Nyaata Company Advocates | Trusted Legal Partners in Kenya" />
-  <meta name="twitter:description" content="Nyaata & Nyaata deliver professional legal services in Litigation, Corporate Law, Conveyancing, Family Law, and Commercial Transactions across Kenya." />
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
+  <meta
+    name="twitter:description"
+    content="Professional legal services in Litigation, Corporate Law, Conveyancing, Family Law, and Commercial Transactions across Kenya."
+  />
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/home-1200x630.jpg" />
+  <meta name="twitter:image:alt" content="Nyaata & Nyaata Company Advocates - Trusted Legal Partners in Kenya" />
+  <!-- Optional -->
+  <!-- <meta name="twitter:site" content="@yourhandle" /> -->
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
-  <!-- Fonts & Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <!-- Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    referrerpolicy="no-referrer"
+  />
 
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="index.css" />
+  <!-- Main Styles -->
+  <link rel="preload" href="/index.css" as="style" />
+  <link rel="stylesheet" href="/index.css" />
 
-  <!-- Schema / Structured Data for Organization -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LegalService",
+    "@id": "https://nyaatanyaataadvocates.co.ke/#legalservice",
     "name": "Nyaata & Nyaata Company Advocates",
-    "url": "https://musyokamutindaadv.co.ke/",
-    "favicon": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png",
-    "sameAs": [
-      "https://www.facebook.com/yourpage",
-      "https://twitter.com/yourhandle",
-      "https://www.linkedin.com/in/naomi-mutinda-aa12982a/"
-    ],
+    "url": "https://nyaatanyaataadvocates.co.ke/",
+    "logo": "https://nyaatanyaataadvocates.co.ke/full-favicon-512x512.png",
+    "image": "https://nyaatanyaataadvocates.co.ke/assets/og/home-1200x630.jpg",
+    "telephone": "+254794378915",
+    "areaServed": "Kenya",
     "priceRange": "$$$",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Mbitini House, First Floor",
       "addressLocality": "Machakos",
+      "addressRegion": "Machakos",
       "addressCountry": "KE"
     },
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+254794378915",
-      "contactType": "customer service"
-    }
+    "contactPoint": [
+      {
+        "@type": "ContactPoint",
+        "telephone": "+254794378915",
+        "contactType": "customer service",
+        "areaServed": "KE",
+        "availableLanguage": ["en", "sw"]
+      }
+    ],
+    "sameAs": [
+      "https://www.facebook.com/yourpage",
+      "https://twitter.com/yourhandle",
+      "https://www.linkedin.com/in/grace-nyaata-aa12982a/"
+    ]
   }
   </script>
 </head>
@@ -102,54 +144,88 @@
       </div>
     </header>
 
-    <section class="hero" id="home">
-      <!-- Slides -->
-      <div
-        class="hero-slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1589829545856-d10d557cf95f?auto=format&fit=crop&w=2070&q=80');
-        "
-      ></div>
-      <div
-        class="hero-slide"
-        style="
-          background-image: url('https://plus.unsplash.com/premium_photo-1695942301071-a70004b9e916?w=500&auto=format&fit=crop&q=60');
-        "
-      ></div>
-      <div
-        class="hero-slide"
-        style="
-          background-image: url('https://plus.unsplash.com/premium_photo-1698084059393-103cb8b86253?w=500&auto=format&fit=crop&q=60');
-        "
-      ></div>
-      <div
-        class="hero-slide"
-        style="
-          background-image: url('https://plus.unsplash.com/premium_photo-1698084059560-9a53de7b816b?auto=format&fit=crop&w=2070&q=80');
-        "
-      ></div>
-      <div
-        class="hero-slide"
-        style="
-          background-image: url('https://plus.unsplash.com/premium_photo-1694088516778-186632fc2804?w=500&auto=format&fit=crop&q=60');
-        "
-      ></div>
-      <div
-        class="hero-slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1589216532372-1c2a367900d9?auto=format&fit=crop&w=2070&q=80');
-        "
-      ></div>
+    <section class="hero">
+      <video class="hero-bg-video" autoplay muted loop playsinline>
+        <source
+          src="https://assets.mixkit.co/videos/47602/47602-720.mp4"
+          type="video/mp4"
+        />
+      </video>
 
       <div class="hero-overlay"></div>
 
-      <div class="hero-content">
-        <h1><span id="typewriter"></span></h1>
-        <p>
-          Over a Decade of legal expertise, protecting your rights, business,
-          and future.
-        </p>
-        <a href="contact.html" class="btn">Schedule a Consultation</a>
+      <div class="hero-container">
+        <div class="hero-visual">
+          <!-- Video clip might sit within this container too if you prefer a framed version -->
+          <!-- But currently the video is full-screen background, we’ll just treat it as left visual area -->
+        </div>
+
+        <div class="hero-text">
+          <p class="super-tag">Nyaata & Nyaata Company Advocates.</p>
+
+          <h1>
+  For <br />
+ Legal<br /><span> Excellence</span>
+</h1>
+
+<p>integrity, precision & results.</p>
+
+<div class="hero-btns">
+  <a href="services.html" class="btn btn-primary">Our Services</a>
+  <a href="contact.html" class="btn btn-outline">Consult Our Advocates</a>
+</div>
+
+        </div>
+      </div>
+    </section>
+
+     <!-- About Section -->
+    <section class="section about" id="about">
+      <div class="container">
+        <div class="about-content">
+          <div>
+            <h1 class="section-title">10+ Years of Legal Excellence</h1>
+            <p>
+              Founded over a decade ago, Nyaata & Nyaata Company Advocates
+              has established itself as a premier law firm in Kenya.It has
+              Branches in Nairobi and Machakos Town. Our team of
+              eight dedicated legal experts brings a wealth of knowledge and
+              strategic approach to every case.
+            </p>
+            <p>
+              With 1000+ cases successfully handled, we have the experience and
+              tenacity to navigate the complexities of the legal system on your
+              behalf. We don't just practice law; we partner with you to protect
+              your rights, assets, and future.
+            </p>
+
+            <div class="stats">
+              <div class="stat-item">
+                <span class="stat-number" data-target="10">0</span>
+                <span class="stat-label">Years Experience</span>
+              </div>
+              <div class="stat-item">
+                <span class="stat-number" data-target="8">0</span>
+                <span class="stat-label">Legal Experts</span>
+              </div>
+              <div class="stat-item">
+                <span class="stat-number" data-target="1000">0</span>
+                <span class="stat-label">Cases Handled</span>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img
+              src="https://images.unsplash.com/photo-1589216532372-1c2a367900d9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGxhd3xlbnwwfHwwfHx8MA%3D%3D"
+              alt="Law Firm Office"
+              style="
+                width: 100%;
+                border-radius: 8px;
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+              "
+            />
+          </div>
+        </div>
       </div>
     </section>
 
@@ -458,105 +534,9 @@
       </div>
     </section>
 
-    <!-- About Section -->
-    <section class="section about" id="about">
-      <div class="container">
-        <div class="about-content">
-          <div>
-            <h1 class="section-title">10+ Years of Legal Excellence</h1>
-            <p>
-              Founded over a decade ago, Nyaata & Nyaata Company Advocates
-              has established itself as a premier law firm in Kenya.It has
-              Branches in Nairobi and Machakos Town. Our team of
-              eight dedicated legal experts brings a wealth of knowledge and
-              strategic approach to every case.
-            </p>
-            <p>
-              With 1000+ cases successfully handled, we have the experience and
-              tenacity to navigate the complexities of the legal system on your
-              behalf. We don't just practice law; we partner with you to protect
-              your rights, assets, and future.
-            </p>
+   
 
-            <div class="stats">
-              <div class="stat-item">
-                <span class="stat-number" data-target="10">0</span>
-                <span class="stat-label">Years Experience</span>
-              </div>
-              <div class="stat-item">
-                <span class="stat-number" data-target="8">0</span>
-                <span class="stat-label">Legal Experts</span>
-              </div>
-              <div class="stat-item">
-                <span class="stat-number" data-target="1000">0</span>
-                <span class="stat-label">Cases Handled</span>
-              </div>
-            </div>
-          </div>
-          <div>
-            <img
-              src="https://images.unsplash.com/photo-1589216532372-1c2a367900d9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGxhd3xlbnwwfHwwfHx8MA%3D%3D"
-              alt="Law Firm Office"
-              style="
-                width: 100%;
-                border-radius: 8px;
-                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-              "
-            />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Values Section -->
-    <section class="section" id="values">
-      <div class="container">
-        <h1 class="section-title">Our Core Values</h1>
-        <div class="values-grid">
-          <div class="value-card">
-            <div class="value-icon">
-              <i class="fas fa-handshake"></i>
-            </div>
-            <h2>Integrity</h2>
-            <p>
-              We uphold the highest standards of honesty, ethics, and
-              transparency in all our dealings.
-            </p>
-          </div>
-          <div class="value-card">
-            <div class="value-icon">
-              <i class="fas fa-award"></i>
-            </div>
-            <h2>Excellence</h2>
-            <p>
-              We are committed to delivering top-tier legal services with
-              precision, expertise, and quality.
-            </p>
-          </div>
-          <div class="value-card">
-            <div class="value-icon">
-              <i class="fas fa-user-tie"></i>
-            </div>
-            <h2>Professionalism</h2>
-            <p>
-              We maintain the utmost legal standards, respect for the court, and
-              unwavering respect for our clients.
-            </p>
-          </div>
-          <div class="value-card">
-            <div class="value-icon">
-              <i class="fas fa-users"></i>
-            </div>
-            <h2>Client-Centered</h2>
-            <p>
-              Your success is our priority. We provide customized legal
-              solutions tailored to your unique needs.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br />
+   
 
     <!-- Testimonials Section -->
     <!-- Trusted Clients Section -->
@@ -667,7 +647,55 @@
         </div>
       </div>
     </section>
-
+ <!-- Values Section -->
+    <section class="section" id="values">
+      <div class="container">
+        <h1 class="section-title">Our Core Values</h1>
+        <div class="values-grid">
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-handshake"></i>
+            </div>
+            <h2>Integrity</h2>
+            <p>
+              We uphold the highest standards of honesty, ethics, and
+              transparency in all our dealings.
+            </p>
+          </div>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-award"></i>
+            </div>
+            <h2>Excellence</h2>
+            <p>
+              We are committed to delivering top-tier legal services with
+              precision, expertise, and quality.
+            </p>
+          </div>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-user-tie"></i>
+            </div>
+            <h2>Professionalism</h2>
+            <p>
+              We maintain the utmost legal standards, respect for the court, and
+              unwavering respect for our clients.
+            </p>
+          </div>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-users"></i>
+            </div>
+            <h2>Client-Centered</h2>
+            <p>
+              Your success is our priority. We provide customized legal
+              solutions tailored to your unique needs.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <!-- CTA Section -->
     <section class="cta" id="contact">
       <div class="container">
