--- a/naomi-mutinda.html
+++ b/naomi-mutinda.html
@@ -8,14 +8,14 @@
   <title>Advocate Nyaata & Nyaata - High Court Advocate | Managing Partner at Nyaata & Nyaata Advocates</title>
   <meta name="description" content="Advocate Nyaata & Nyaata is a Managing Partner at Nyaata & Nyaata Company Advocates in Machakos, Kenya. Specializes in litigation, corporate law, conveyancing, family law, and commercial disputes." />
   <meta name="keywords" content="Advocate Nyaata & Nyaata, High Court Advocate Kenya, Machakos lawyer, litigation lawyer Kenya, corporate law advocate, conveyancing Kenya, family law attorney, commercial disputes Kenya" />
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/naomi-mutinda.html" />
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/naomi-mutinda.html" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="profile" />
   <meta property="og:title" content="Advocate Nyaata & Nyaata - High Court Advocate | Managing Partner" />
   <meta property="og:description" content="Experienced High Court Advocate specializing in litigation, corporate law, conveyancing, family law, and commercial disputes in Machakos, Kenya." />
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/naomi-mutinda.html" />
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/naomi-mutinda.jpg" />
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/naomi-mutinda.html" />
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/naomi-mutinda.jpg" />
   <meta property="og:image:alt" content="Advocate Nyaata & Nyaata - High Court Advocate Kenya" />
   <meta property="og:site_name" content="Nyaata & Nyaata Company Advocates" />
   <meta property="og:locale" content="en_KE" />
@@ -26,7 +26,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Advocate Nyaata & Nyaata - High Court Advocate | Managing Partner" />
   <meta name="twitter:description" content="Managing Partner at Nyaata & Nyaata Company Advocates specializing in litigation, corporate law, and conveyancing in Machakos, Kenya." />
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/naomi-mutinda.jpg" />
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/naomi-mutinda.jpg" />
   <meta name="twitter:image:alt" content="Advocate Nyaata & Nyaata professional portrait" />
   <meta name="twitter:site" content="@MusyokaMutinda" />
   <meta name="twitter:creator" content="@MusyokaMutinda" />
@@ -34,7 +34,7 @@
   <!-- Robots -->
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <meta name="author" content="Nyaata & Nyaata Company Advocates" />
-  <link rel="author" href="https://musyokamutindaadv.co.ke/humans.txt" />
+  <link rel="author" href="https://nyaatanyaataadvocates.co.ke/humans.txt" />
 
   <!-- Geo Tags -->
   <meta name="geo.region" content="KE-MKA" />
@@ -79,14 +79,14 @@
       "description": "Experienced in litigation, corporate law, conveyancing, family law, and commercial disputes."
     },
     "description": "Managing Partner at Nyaata & Nyaata Company Advocates specializing in litigation, corporate law, conveyancing, and family law.",
-    "url": "https://musyokamutindaadv.co.ke/naomi-mutinda.html",
-    "image": "https://musyokamutindaadv.co.ke/naomi-mutinda.jpg",
-    "email": "mailto:info@musyokamutindaadv.co.ke",
+    "url": "https://nyaatanyaataadvocates.co.ke/naomi-mutinda.html",
+    "image": "https://nyaatanyaataadvocates.co.ke/naomi-mutinda.jpg",
+    "email": "mailto:info@nyaatanyaataadvocates.co.ke",
     "sameAs": ["https://www.linkedin.com/in/naomi-mutinda-aa12982a/"],
     "affiliation": {
       "@type": "LegalService",
       "name": "Nyaata & Nyaata Company Advocates",
-      "url": "https://musyokamutindaadv.co.ke/",
+      "url": "https://nyaatanyaataadvocates.co.ke/",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Machakos",
@@ -419,9 +419,9 @@
     "@context": "https://schema.org",
     "@type": "LegalService",
     "name": "Nyaata & Nyaata Company Advocates",
-    "url": "https://musyokamutindaadv.co.ke",
-    "favicon": "https://musyokamutindaadv.co.ke/final favicon.png",
-    "image": "https://musyokamutindaadv.co.ke/https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1676964499754?e=1767225600&v=beta&t=FQyvVD8UBlncp2mKVcAnR952rkn0IksajFlkMZ_65Pc",
+    "url": "https://nyaatanyaataadvocates.co.ke",
+    "favicon": "https://nyaatanyaataadvocates.co.ke/final favicon.png",
+    "image": "https://nyaatanyaataadvocates.co.ke/https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1676964499754?e=1767225600&v=beta&t=FQyvVD8UBlncp2mKVcAnR952rkn0IksajFlkMZ_65Pc",
     "description": "Leading law firm in Machakos Kenya specializing in litigation, corporate law, conveyancing, and family law.",
     "address": {
       "@type": "PostalAddress",
