--- a/services.html
+++ b/services.html
@@ -2,78 +2,121 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Page Title -->
+  <!-- SEO -->
   <title>Legal Services in Kenya | Nyaata & Nyaata Advocates</title>
+  <meta
+    name="description"
+    content="Providing professional legal services in Kenya including Conveyancing, Corporate Law, Litigation, Probate, Family Law, and Legal Compliance. Trusted lawyers delivering expert advice and representation."
+  />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="author" content="Nyaata & Nyaata Advocates" />
+  <meta name="theme-color" content="#0b1b2b" />
+  <meta name="color-scheme" content="light" />
 
-  <!-- Meta Description -->
-  <meta name="description" content="Providing professional legal services in Kenya including Conveyancing, Corporate Law, Litigation, Probate, Family Law, and Legal Compliance. Trusted lawyers delivering expert advice and representation." />
-
-  <!-- Keywords -->
-  <meta name="keywords" content="legal services Kenya, corporate law, conveyancing, litigation, probate, family law, legal advice, legal representation, Nyaata & Nyaata Advocates" />
-
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://musyokamutindaadv.co.ke/services" />
+  <!-- Canonical (use the REAL page URL you serve) -->
+  <link rel="canonical" href="https://nyaatanyaataadvocates.co.ke/services.html" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png" />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
 
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Legal Services in Kenya | Nyaata & Nyaata Advocates" />
-  <meta property="og:description" content="Providing professional legal services in Kenya including Corporate Law, Litigation, Conveyancing, Family Law, Probate, and Compliance. Trusted legal counsel you can rely on." />
-  <meta property="og:url" content="https://musyokamutindaadv.co.ke/services" />
   <meta property="og:site_name" content="Nyaata & Nyaata Advocates" />
-  <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta property="og:image:width" content="512" />
-  <meta property="og:image:height" content="512" />
+  <meta property="og:locale" content="en_KE" />
+  <meta property="og:title" content="Legal Services in Kenya | Nyaata & Nyaata Advocates" />
+  <meta
+    property="og:description"
+    content="Professional legal services in Kenya including Corporate Law, Litigation, Conveyancing, Family Law, Probate, and Compliance."
+  />
+  <meta property="og:url" content="https://nyaatanyaataadvocates.co.ke/services.html" />
 
-  <!-- Twitter Card -->
+  <!-- Use a real OG image (recommended 1200x630) -->
+  <meta property="og:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/services-1200x630.jpg" />
+  <meta property="og:image:secure_url" content="https://nyaatanyaataadvocates.co.ke/assets/og/services-1200x630.jpg" />
+  <meta property="og:image:alt" content="Legal Services — Nyaata & Nyaata Advocates" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Legal Services in Kenya | Nyaata & Nyaata Advocates" />
-  <meta name="twitter:description" content="Expert legal services in Kenya including Corporate Law, Litigation, Conveyancing, Family Law, Probate, and Compliance. Trusted and reliable legal counsel." />
-  <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta name="twitter:site" content="@MusyokaMutinda" />
+  <meta
+    name="twitter:description"
+    content="Expert legal services in Kenya including Corporate Law, Litigation, Conveyancing, Family Law, Probate, and Compliance."
+  />
+  <meta name="twitter:image" content="https://nyaatanyaataadvocates.co.ke/assets/og/services-1200x630.jpg" />
+  <meta name="twitter:image:alt" content="Legal Services — Nyaata & Nyaata Advocates" />
+  <!-- Optional: only keep if it’s a real, active account -->
+  <!-- <meta name="twitter:site" content="@MusyokaMutinda" /> -->
 
-  <!-- Fonts & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
-  <!-- Swiper CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <!-- Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    referrerpolicy="no-referrer"
+  />
 
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="services.css" />
+  <!-- Swiper CSS (only keep if you actually use Swiper on this page) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <!-- Styles -->
+  <link rel="preload" href="/services.css" as="style" />
+  <link rel="stylesheet" href="/services.css" />
+
+  <!-- Structured Data (LegalService + FAQPage) -->
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "How do I schedule a consultation with your firm?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Call +254794378915, email info@nyaataandnyaataadv.co.ke, or use the contact form."
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "LegalService",
+        "@id": "https://nyaatanyaataadvocates.co.ke/#legalservice",
+        "name": "Nyaata & Nyaata Advocates",
+        "url": "https://nyaatanyaataadvocates.co.ke/",
+        "telephone": "+254794378915",
+        "email": "info@nyaataandnyaataadv.co.ke",
+        "areaServed": "Kenya"
+      },
+      {
+        "@type": "FAQPage",
+        "@id": "https://nyaatanyaataadvocates.co.ke/services.html#faqs",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "How do I schedule a consultation with your firm?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Call +254794378915, email info@nyaataandnyaataadv.co.ke, or use the contact form."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What are your legal fees?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Fees vary by case complexity. We can agree on hourly rates or fixed fees depending on the matter."
+            }
+          }
+        ]
       }
-    },
-    {
-      "@type": "Question",
-      "name": "What are your legal fees?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Fees vary by case complexity. We offer hourly rates, fixed fees, and in some cases contingency fees."
-      }
-    }
-  ]
-}
-</script>
-
+    ]
+  }
+  </script>
 </head>
+
 <body>
     <!-- Header & Navigation -->
     <header>
